2011-02-02  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #17428: Parsetime comment is inserted BEFORE !doctype and html tag (Thanks to Georg Ringer)

2011-02-02  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #17436 typo in class.tslib_adminpanel.php (Thanks to Bjoern Pedersen)

2011-02-01  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #17373: Standalone images in RTE-enabled field not rendered in frontend
	* Fixed bug #17349: htmlArea RTE: JS error when using "Edit element"
	* Updated htmlArea RTE version to 2.2.0
	* Fixed bug #17438: htmlArea RTE: non-xhtml markup in image dialogue

2011-02-01  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17411: DatePicker middle selector not readable
	* Fixed bug #17371: Typo in MEDIA renders wrong height

2011-01-31  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #17402: Error page should use TYPO3_copyright_year constant (Thanks to Johannes Feustel)

2011-01-28  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #17372: stdWrap .current and .setContentToCurrent do not return content

2011-01-26  Ernesto Baschny  <ernesto.baschny@typo3.org>

	* Release of TYPO3 4.5.0

2011-01-26  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Synchronized external repositories of version (tag 4.5.0) and workspaces (tag 4.5.0)

2011-01-26  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #17336: Swift Mailer Adapter does not parse To: addresses

2011-01-26  Steffen Kamper  <steffen@typo3.org>

	* Added manual to workspace extension
	* Merge of extension manager for 4.5.0
	* Fixed bug #17319: Incorrect/missing array entries in t3lib_cs regarding Galician and Georgian

2011-01-26  Ernesto Baschny  <ernst@cron-it.de>

	* Cleaned up ext_emconf.php of all sysext
	* Fixed bug #17297: The column headers of the grid view are swapped when there is no column header available (Thanks to Jo Hasenau)
	* Prepared NEWS.txt for release of 4.5.0
	* Fixed issue #17333: Rename "Update Wizard" into "Upgrade Wizard"
	* Merged Linkvalidator 1.0.0